+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 beta 1?
================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------

- Issue #7624: Fix isinstance(foo(), collections.Callable) for old-style
  classes.

- Issue #7143: get_payload used to strip any trailing newline from a
  base64 transfer-encoded payload *after* decoding it; it no longer does.
  This is a behavior change, so email's minor version number is now
  bumped, to version 4.0.2, for the 2.7 release.

Extension Modules
-----------------

- Issue #1530559: When passing a non-integer argument to struct.pack
  with *any* integer format code (one of 'bBhHiIlLqQ'), struct.pack
  attempts to use the argument's __int__ method to convert to an
  integer before packing.  It also produces a DeprecationWarning in
  this case.  (In Python 2.6, the behaviour was inconsistent: __int__
  was used for some integer codes but not for others, and the set of
  integer codes for which it was used differed between native packing
  and standard packing.)



What's New in Python 2.7 alpha 4?
=================================

*Release date: 2010-03-06*

Core and Builtins
-----------------

- Issue #7544: Preallocate thread memory before creating the thread to avoid
  a fatal error in low memory condition.

- Issue #7820: The parser tokenizer restores all bytes in the right if
  the BOM check fails.

- Issue #7309: Fix unchecked attribute access when converting
  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
  strings.

- Issue #7649: "u'%c' % char" now behaves like "u'%s' % char" and raises a
  UnicodeDecodeError if 'char' is a byte string that can't be decoded using
  the default encoding.

- Issue #6902: Fix problem with built-in types format incorrectly with
  0 padding.

- Issue #2560: remove an unnecessary 'for' loop from my_fgets() in
  Parser/myreadline.c.
